spacing fixes

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -61,7 +61,7 @@ html {
   margin-top: -75px;
   position: absolute;
   z-index: 100;
-  padding: 1.75rem;
+  padding: 1.5rem 1.75rem 0;
   border-bottom: 3px solid #c7b99f;
 }
 @media (max-width: 991.98px) {
@@ -74,13 +74,12 @@ html {
 }
 @media (max-width: 766.98px) {
   .banner-offset {
-    padding-top: 400px;
+    padding-top: 450px;
   }
   .intro-card-overlay {
     margin-top: -40px;
     position: absolute;
     z-index: 100;
-    padding: 1.75rem;
   }
 }
 @media (max-width: 427.98px) {
@@ -90,7 +89,6 @@ html {
   .intro-card-overlay {
     margin: -30px 25px 0px !important;
     position: relative;
-    padding: 1.75rem;
   }
 }
 .box-shadow {
